Wed May  5 20:37:54 2010  wanabe  <s.wanabe@gmail.com>

	* thread_win32.c (w32_wait_events): get GVL before handle interrupt
	  event.   [ruby-core:27199], [ruby-core:29698]

Wed May  5 19:00:01 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: revert. enbugged by last commit.
	  ([ruby-dev:41133], [ruby-dev:41134], [ruby-core:30010])

	* ext/tk/README.tcltklib: ditto.

Wed May  5 15:54:35 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_stat): use STAT macro instead of calling stat() directly.
	  reported by Bill Kelly.  [ruby-core:30012]

Wed May  5 11:43:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bootstraptest/test_io.rb (megacontent-copy_stream): get rid of
	  deadlock.

Wed May  5 07:27:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_mark_method_entry): renamed.

Wed May  5 05:20:27 2010  Koichi Sasada  <ko1@atdot.net>

	* method.h, vm_method.c: rename some internal functions related to
	  rb_method_entry_t.
	  rb_add_method_me()        -> rb_method_entry_set().
	  rb_get_method_entry()     -> rb_method_entry_without_cache().
	  rb_gc_mark_method_entry() -> rb_mark_method_entry().

	* class.c, proc.c: ditto.

Tue May  4 22:59:48 2010  wanabe  <s.wanabe@gmail.com>

	* compile.c (iseq_build_body): update iseq->ic_size.
	  a patch from Tomoyuki Chikanaga. see #3236.

Tue May  4 18:51:22 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (name_err_mesg_to_str): preserve encoding of inspection.
	  [ruby-core:29948]

Tue May  4 18:38:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/fileutils/test_fileutils.rb (test_copy_stream):
	  IO.copy_stream support binmode only currently.
	  [ruby-core:23724]

Tue May  4 12:46:09 2010  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (argument_error): push correct backtrace.
	  Bug #2281 [ruby-core:26333]

Tue May  4 12:38:40 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (sockopt_inspect): use rb_str_cat2 and
	  rb_str_append.
